# duck-db-proj

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  DATA_SOURCE.md  LMSTUDIO_thinkingpad_logs.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  QUICKSTART.md  README.md  README_STREAMLINED.md  SQL_GENERATION_IMPROVEMENTS.md  THINKING_PAD_IMPLEMENTATION_SUMMARY.md  app.py  initial_feature.md  pyproject.toml  requirements.txt  requirements_old.txt  temp_parse_function.py  test_app.py  test_auto_load.py  test_chat_fixes.py  test_chat_ui.py  test_llm_improvements.py  test_manual_copy_to_editor.py  test_query_explainer.py  test_sql_generation.py  test_streamlined.py
.serena/: project.yml
.serena/memories/: code_structure.md  code_style_conventions.md  confidence_score_fix.md  data_investigation_platform_mvp.md  development_workflow.md  migration_checklist.md  performance_optimizations_applied.md  (+9 more)
claudedocs/: dataframe-comparison-fix.md
docs/: CLEANUP_SUMMARY.md  LM_STUDIO_SETUP.md  Optimization-prd.md  QUERY_EXPLANATION_FEATURE.md  brief.md  chat-interface-epic.md  lm-studio-setup.md
scripts/: README.md
tests/: test_analytics_profiler.py  test_analytics_templates.py  test_chart_bugs.py  test_context_manager.py  test_copy_to_editor.py  test_copy_to_editor_v2.py  test_enhanced_data_explorer.py  test_enhanced_schema_extraction.py  test_enhanced_sql_editor.py  test_enhanced_visualizations.py  test_integration.py  test_llm_integration.py  test_optimized_query_executor.py  test_schema_extractor.py  test_sql_execution_dataframe.py  test_sql_generator_enhanced.py
(+163 files in other folders)
